# ROS2

./: .gitignore  README.md
scripts/: start_test_streams.sh
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/launch/: control_panel.launch.py
src/robot_controller/src/: MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  RobotControlWidget.cpp  RobotControlWidget.h  RobotController.cpp  RobotController.h  RosCameraWidget.cpp  RosCameraWidget.h  SpawnWidget.cpp  SpawnWidget.h  VideoWidget.cpp  VideoWidget.h  main.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: display.rviz
src/robot_description/launch/: rviz.launch.py
src/robot_description/urdf/: robot.urdf.xacro
src/robot_proj/: CMakeLists.txt  package.xml
src/robot_proj/config/: slam_toolbox_params.yaml
src/robot_proj/launch/: classroom_sim.launch.py
src/robot_proj/models/Chair/: model.sdf
src/robot_proj/models/Desk/: model.sdf
src/robot_proj/models/classroom_furniture/: model.config  model.sdf
src/robot_proj/models/custom_robot/: model.config  model.sdf
src/robot_proj/models/turtlebot3_waffle/: model.sdf
src/robot_proj/scripts/: demo_scenarios.py  manage_sensors.py  spawn_robot.py
src/robot_proj/worlds/: classroom.world
web/: index.html  server.py  style.css
